--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ langchain>=0.0.222; python_version >= '3.8'
 mysql-connector-python==8.0.31
 openai>=0.27.8
 oracledb==1.3.1
+pinotdb==5.1.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pydruid==0.6.5
